fixed scaling problems on mobile positioning

--- a/css/Praktische Informatie.css
+++ b/css/Praktische Informatie.css
@@ -19,7 +19,7 @@
 }
 
 .PIalgTitle {
-	background-image: url("../images/Blue_band.png");
+	/* background-image: url("../images/Blue_band.png"); */
 	background-repeat: no-repeat;
 	padding: 20px;
 	z-index: 2;
